<resources>
    <string name="app_name">My Application</string>
    <string name="title_home"></string>
    <string name="title_nutrition_facts">Nutrition Facts</string>
    <string name="food_items">Food Items</string>
    <string name="add_item">Add Item</string>
    <string name="add_food">Add Food</string>
    <string name="time_label0600">0600</string>
    <string name="time_label0900">0900</string>
    <string name="time_label1100">1100</string>
    <string name="time_label1200">1200</string>
    <string name="time_label1500">1500</string>
    <string name="time_label1800">1800</string>
    <string name="time_label_misc">Misc</string>
    <string name="select_food_hint">Please add food items.</string>
    <string name="protein_macro">%</string>
    <string name="add_food_button_dialog_title">Available Foods:</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clear_all_label">Clear All</string>
    <string name="ok_labl">OK</string>
    <string name="empty_text">" "</string>
    <string name="home_cal_hint">0 Cal </string>
    <string name="home_protein_hint">0% P </string>
    <string name="home_carb_hint">0% C </string>
    <string name="home_fat_hint">0% F </string>
    <string name="add_food_item">Add Food</string>
    <string name="empty_record">No records found.</string>
    <string name="enter_name">Enter name</string>
    <string name="add_fooditem_button">Add food</string>
</resources>