<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/home_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/time_label1100"
        app:layout_constraintBaseline_toBaselineOf="@+id/home_items_selected1100"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/home_items_selected1100"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/select_food_hint"
        app:layout_constraintBaseline_toBaselineOf="@+id/home_add_food_button1100"
        app:layout_constraintEnd_toStartOf="@+id/home_add_food_button1100"
        app:layout_constraintStart_toEndOf="@+id/home_time_label" />

    <TextView
        android:id="@+id/home_time_label6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/time_label_misc"
        app:layout_constraintBaseline_toBaselineOf="@+id/home_items_selected_misc"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/home_items_selected_misc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/select_food_hint"
        app:layout_constraintBaseline_toBaselineOf="@+id/home_add_food_button_misc"
        app:layout_constraintEnd_toStartOf="@+id/home_add_food_button_misc"
        app:layout_constraintStart_toEndOf="@+id/home_time_label6" />

    <TextView
        android:id="@+id/home_time_label5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/time_label1800"
        app:layout_constraintBaseline_toBaselineOf="@+id/home_items_selected1800"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/home_items_selected1800"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/select_food_hint"
        app:layout_constraintBaseline_toBaselineOf="@+id/home_add_food_button1800"
        app:layout_constraintEnd_toStartOf="@+id/home_add_food_button1800"
        app:layout_constraintStart_toEndOf="@+id/home_time_label5" />

    <TextView
        android:id="@+id/home_time_label4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/time_label1500"
        app:layout_constraintBaseline_toBaselineOf="@+id/home_items_selected1500"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/home_items_selected1500"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/select_food_hint"
        android:scrollHorizontally="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/home_add_food_button1500"
        app:layout_constraintEnd_toStartOf="@+id/home_add_food_button1500"
        app:layout_constraintStart_toEndOf="@+id/home_time_label4" />

    <TextView
        android:id="@+id/home_time_label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/time_label1200"
        app:layout_constraintBaseline_toBaselineOf="@+id/home_items_selected1200"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/home_items_selected1200"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/select_food_hint"
        app:layout_constraintBaseline_toBaselineOf="@+id/home_add_food_button1200"
        app:layout_constraintEnd_toStartOf="@+id/home_add_food_button1200"
        app:layout_constraintStart_toEndOf="@+id/home_time_label3" />

    <TextView
        android:id="@+id/home_time_label0900"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/time_label0900"
        app:layout_constraintBaseline_toBaselineOf="@+id/home_items_selected0900"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/home_items_selected0900"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/select_food_hint"
        app:layout_constraintBaseline_toBaselineOf="@+id/home_add_food_button0900"
        app:layout_constraintEnd_toStartOf="@+id/home_add_food_button0900"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toEndOf="@+id/home_time_label0900" />

    <TextView
        android:id="@+id/home_calories_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_cal_hint"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_protein_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:hint="@string/home_protein_hint"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/home_calories_tv" />

    <TextView
        android:id="@+id/home_carb_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/home_carb_hint"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/home_fat_tv"
        app:layout_constraintStart_toEndOf="@+id/home_protein_tv"
        app:layout_constraintTop_toTopOf="@id/home_calories_tv" />

    <TextView
        android:id="@+id/home_fat_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/home_fat_hint"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/home_calories_tv" />

    <Button
        android:id="@+id/home_add_food_button0600"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/add_food"
        app:layout_constraintBottom_toTopOf="@id/home_add_food_button0900"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/home_fat_tv" />

    <Button
        android:id="@+id/home_add_food_button0900"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/add_food"
        app:layout_constraintBottom_toTopOf="@+id/home_add_food_button1100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_add_food_button0600" />

    <Button
        android:id="@+id/home_add_food_button1100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/add_food"
        app:layout_constraintBottom_toTopOf="@+id/home_add_food_button1200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_add_food_button0900" />

    <Button
        android:id="@+id/home_add_food_button1200"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/add_food"
        app:layout_constraintBottom_toTopOf="@+id/home_add_food_button1500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_add_food_button1100" />

    <Button
        android:id="@+id/home_add_food_button1500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="20dp"
        android:text="@string/add_food"
        app:layout_constraintBottom_toTopOf="@+id/home_add_food_button1800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_add_food_button1200" />

    <Button
        android:id="@+id/home_add_food_button1800"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="21dp"
        android:text="@string/add_food"
        app:layout_constraintBottom_toTopOf="@+id/home_add_food_button_misc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_add_food_button1500" />

    <Button
        android:id="@+id/home_add_food_button_misc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="24dp"
        android:text="@string/add_food"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_add_food_button1800" />

    <TextView
        android:id="@+id/home_items_selected0600"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/select_food_hint"
        android:isScrollContainer="true"
        android:overScrollMode="never"
        app:layout_constraintBaseline_toBaselineOf="@+id/home_add_food_button0600"
        app:layout_constraintEnd_toStartOf="@+id/home_add_food_button0600"
        app:layout_constraintStart_toEndOf="@+id/home_time_label0600" />

    <TextView
        android:id="@+id/home_time_label0600"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="0600"
        app:layout_constraintBaseline_toBaselineOf="@+id/home_items_selected0600"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>